--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Обои Tytan</string>
+    <string name="app_name">Обои FuryDragons</string>
     <string name="set_wallpaper">Установить обои</string>
     <string name="no_wallpaper">Нет обоев</string>
 </resources>
