--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Tytan Tapety</string>
+    <string name="app_name">FuryDragons Tapety</string>
     <string name="set_wallpaper">Nastaviť tapetu</string>
     <string name="no_wallpaper">Žiadne tapety</string>
 </resources>
