--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<string name="app_name">Tytan Тапети</string>
+<string name="app_name">FuryDragons Тапети</string>
 <string name="set_wallpaper">Постави тапет</string>
 <string name="no_wallpaper">Без тапета</string>
 </resources>
