--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Tytan-bakgrunder</string>
+    <string name="app_name">FuryDragons-bakgrunder</string>
     <string name="set_wallpaper">Ange bakgrundsbild</string>
     <string name="no_wallpaper">Ingen bakgrundsbild</string>
 </resources>
