--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -14,7 +14,7 @@
      limitations under the License.
 -->
 <resources>
-    <string name="app_name">Ταπετσαρίες FuryDragons</string>
+    <string name="app_name">Ταπετσαρίες Dragon</string>
     <string name="set_wallpaper">Ορισμός ταπετσαρίας</string>
     <string name="no_wallpaper">Χωρίς ταπετσαρία</string>
 </resources>
