--- a/res/values-et/strings.xml
+++ b/res/values-et/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">FuryDragons taustapildid</string>
+    <string name="app_name">Dragon taustapildid</string>
     <string name="set_wallpaper">Määra taustapildiks</string>
     <string name="no_wallpaper">Ei taustapilti</string>
 </resources>
