--- a/res/values-ug/strings.xml
+++ b/res/values-ug/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<string name="app_name">FuryDragons تام قەغەزلەر</string>
+<string name="app_name">Dragon تام قەغەزلەر</string>
 <string name="set_wallpaper">تام قەغەز تەڭشىكى</string>
 <string name="no_wallpaper">تام قەغەز يوق</string>
 </resources>
