--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -15,7 +15,7 @@
 -->
 
 <resources>
-    <string name="app_name">Фони FuryDragons</string>
+    <string name="app_name">Фони Dragon</string>
     <string name="set_wallpaper">Встановити фон</string>
     <string name="no_wallpaper">Без фону</string>
 </resources>
