--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,7 +15,7 @@
 -->
 
 <resources>
-    <string name="app_name">FuryDragons Wallpapers</string>
+    <string name="app_name">Dragon Wallpapers</string>
     <string name="set_wallpaper">Set wallpaper</string>
     <string name="no_wallpaper">No wallpaper</string>
 </resources>
